DND-131 update included config order

--- a/apps/opik-frontend/nginx/nginx.conf
+++ b/apps/opik-frontend/nginx/nginx.conf
@@ -39,8 +39,8 @@ http {
     # Include server configurations
     include /etc/nginx/conf.d/*.conf;
 
-    access_log  /dev/stdout main;
-    error_log  /dev/stderr error;
+    access_log /dev/stdout ${NGINX_ACCESS_LOG_FORMAT};
+    error_log  /dev/stderr ${NGINX_ERROR_LOG_LEVEL};
     ${NGINX_EXTRA_ACCESS_LOG}
     ${NGINX_EXTRA_ERROR_LOG}
 }
