--- a/deployment/helm_chart/opik/templates/deployment.yaml
+++ b/deployment/helm_chart/opik/templates/deployment.yaml
@@ -210,8 +210,15 @@ spec:
           {{- end }}
           {{- if eq $key "frontend" }}
           - name: {{ include "opik.name" $ }}-frontend-nginx
-            mountPath: /etc/nginx/templates
+            mountPath: /etc/nginx/templates/default.conf.template
+            subPath: default.conf.template
             readOnly: true
+          {{-   if $.Values.component.frontend.logFormats }}
+          - name: {{ include "opik.name" $ }}-frontend-nginx
+            mountPath: /etc/nginx/templates/10-log-formats.conf.template
+            subPath: 10-log-formats.conf.template
+            readOnly: true
+          {{-   end }}
           {{- end }}
           {{- with $value.volumeMounts }}
             {{- toYaml . | nindent 12 }}
@@ -249,13 +256,6 @@ spec:
       - name: {{ include "opik.name" $ }}-frontend-nginx
         configMap:
           name: {{ include "opik.name" $ }}-frontend-nginx
-          items:
-          - key: default.conf.template
-            path: default.conf.template
-          {{- if $.Values.component.frontend.logFormats }}
-          - key: log-formats.conf.template
-            path: log-formats.conf.template
-          {{- end }}
       {{- end }}
       {{- with $value.volumes }}
         {{- toYaml . | nindent 8 }}
