--- a/.github/workflows/typescript_sdk_publish.yml
+++ b/.github/workflows/typescript_sdk_publish.yml
@@ -40,76 +40,35 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 5
     env:
-      IS_RELEASE: ${{ github.event.inputs.is_release || inputs.is_release }}
+      IS_RELEASE: ${{ inputs.is_release }}
     defaults:
       run:
         working-directory: sdks/typescript
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
         with:
           ref: ${{ github.ref }}
           fetch-depth: 0
           token: ${{ secrets.GH_PAT_TO_ACCESS_GITHUB_API }}
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Build and Publish TypeScript SDK
+        id: build_publish
+        uses: ./.github/actions/typescript-sdk-build-and-publish
         with:
-          node-version: "20"
-          registry-url: "https://registry.npmjs.org"
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Generate version
-        id: version
-        run: |
-          if [ -n "${{ github.event.inputs.version || inputs.version }}" ]; then
-            # Use provided version from workflow_dispatch or workflow_call
-            VERSION="${{ github.event.inputs.version || inputs.version }}"
-          else
-            # For push/PR: use package.json version with short SHA (not published)
-            PACKAGE_VERSION=$(node -p "require('./package.json').version")
-            SHORT_SHA=$(git rev-parse --short HEAD)
-            VERSION="${PACKAGE_VERSION}-${SHORT_SHA}"
-          fi
-          echo "VERSION=${VERSION}" >> $GITHUB_OUTPUT
-          echo "Generated version: ${VERSION}"
-
-      - name: Update version
-        if: ${{ env.IS_RELEASE }}
-        run: npm version ${{ steps.version.outputs.VERSION }} --no-git-tag-version
-
-      - name: Build package
-        run: npm run build
-
-      - name: Commit version changes
-        if: ${{ env.IS_RELEASE }}
-        run: |
-          git config --local user.email "github-actions@comet.com"
-          git config --local user.name "github-actions"
-          git add package.json package-lock.json
-          git commit -m "Update TypeScript SDK version to ${{ steps.version.outputs.VERSION }}"
-
-      - name: Publish to NPM
-        if: ${{ env.IS_RELEASE }}
-        run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-
-      - name: Push changes
-        if: ${{ env.IS_RELEASE }}
-        uses: ad-m/github-push-action@v0.8.0
-        with:
+          working_directory: sdks/typescript
+          version: ${{ inputs.version || '' }}
+          is_release: ${{ env.IS_RELEASE }}
+          package_name: "TypeScript SDK"
+          npm_token: ${{ secrets.NPM_TOKEN }}
           github_token: ${{ secrets.GH_PAT_TO_ACCESS_GITHUB_API }}
-          branch: ${{ github.ref }}
-          force_with_lease: true
 
       - name: Summary
         run: |
           echo "## TypeScript SDK Build" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "**Version:** ${{ steps.version.outputs.VERSION }}" >> $GITHUB_STEP_SUMMARY
+          echo "**Version:** ${{ steps.build_publish.outputs.version }}" >> $GITHUB_STEP_SUMMARY
           echo "**Event:** ${{ github.event_name }}" >> $GITHUB_STEP_SUMMARY
           echo "**Is Release:** ${{ env.IS_RELEASE }}" >> $GITHUB_STEP_SUMMARY
           if [ "${{ env.IS_RELEASE }}" = "true" ]; then
