--- a/apps/opik-backend/pom.xml
+++ b/apps/opik-backend/pom.xml
@@ -313,6 +313,11 @@
             <artifactId>tika-core</artifactId>
             <version>3.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>io.vavr</groupId>
+            <artifactId>vavr</artifactId>
+            <version>0.10.7</version>
+        </dependency>
 
         <!-- Test -->
 
