Temp disable guardrails build

--- a/.github/workflows/build_apps.yml
+++ b/.github/workflows/build_apps.yml
@@ -140,19 +140,19 @@ jobs:
       comet_build_args: ""
       is_release: ${{ inputs.is_release || false }}
 
-  build-guardrails-backend:
-    if: inputs.build_guardrails != false 
-    needs:
-      - set-version
-    secrets: inherit
-    uses: ./.github/workflows/build_and_push_docker.yaml
-    with:
-      image: "opik-guardrails-backend"
-      version: ${{needs.set-version.outputs.version}}
-      build_from: ${{needs.set-version.outputs.build_from}}
-      build_comet_image: false
-      comet_build_args: ""
-      is_release: ${{ inputs.is_release || false }}
+  # build-guardrails-backend:
+  #   if: inputs.build_guardrails != false 
+  #   needs:
+  #     - set-version
+  #   secrets: inherit
+  #   uses: ./.github/workflows/build_and_push_docker.yaml
+  #   with:
+  #     image: "opik-guardrails-backend"
+  #     version: ${{needs.set-version.outputs.version}}
+  #     build_from: ${{needs.set-version.outputs.build_from}}
+  #     build_comet_image: false
+  #     comet_build_args: ""
+  #     is_release: ${{ inputs.is_release || false }}
 
   build-frontend:
     needs:
