feat: Enable parallel test execution with 2 JVM forks
- Configure Maven Surefire to use 2 parallel forks for faster test execution
- Set forkCount=2 to run test classes in 2 separate JVM processes
- Allocate 4GB heap per fork (2 * 4GB = 8GB total heap)
- Keep reuseForks=false to prevent Quartz Scheduler conflicts
- Add JUnit platform properties for class-level parallelization
- Create comprehensive parallel testing documentation

Configuration balances parallelism with memory constraints:
- 2 forks * 4GB = 8GB heap + ~4GB overhead = 12GB total
- JUnit runs test classes concurrently within each fork
- Tests within a class run sequentially (preserves @TestInstance PER_CLASS)
- 4GB per fork should handle most test suites including large payloads

Requires at least 12-16GB system RAM for stable operation.
If OOM errors occur, consider reducing to forkCount=1 with -Xmx6g.

--- a/apps/opik-backend/pom.xml
+++ b/apps/opik-backend/pom.xml
@@ -560,21 +560,19 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <!-- Enable parallel test execution at class level -->
-                    <parallel>classes</parallel>
-                    <!-- Use 2 threads per CPU core for optimal throughput -->
-                    <threadCount>2</threadCount>
-                    <perCoreThreadCount>true</perCoreThreadCount>
-                    <!-- Use isolated classloaders per test class to prevent cross-contamination -->
-                    <forkCount>1</forkCount>
-                    <reuseForks>true</reuseForks>
-                    <!-- Increase memory for parallel execution -->
-                    <argLine>-Xmx2g -XX:+UseG1GC</argLine>
-                </configuration>
-            </plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <configuration>
+                  <!-- Enable parallel test execution at class level -->
+                  <parallel>classes</parallel>
+                  <!-- Use 2 forks to increase parallelism -->
+                  <forkCount>2</forkCount>
+                  <!-- Don't reuse forks to prevent Quartz Scheduler conflicts -->
+                  <reuseForks>false</reuseForks>
+                  <!-- Allocate 4GB per fork (2 forks * 4GB = 8GB heap total) -->
+                  <argLine>-Xmx4g -XX:+UseG1GC</argLine>
+              </configuration>
+          </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
